basic styles added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Nimmo Bingo</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name='description' content='An automated web-based Bingo game demonstration'>
     <meta name='mobile-web-app-capable' content='yes'>
@@ -11,9 +12,18 @@
   <body>
     <main>
       <ol>
-        <li>
+        <li class='card-container'>
           <div class='card'>
             <!-- Individual numbers here -->
+            <div class='number-row'>
+              <span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span>
+            </div>
+            <div class='number-row'>
+              <span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span>
+            </div>
+            <div class='number-row'>
+              <span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span>
+            </div>
           </div>
           <div class='remaining-numbers'></div>
         </li>
