card is being populated correctly

--- a/index.html
+++ b/index.html
@@ -13,22 +13,100 @@
     <main>
       <ol>
         <li class='card-container'>
-          <div class='card'>
+          <div class='card 0'>
             <!-- Individual numbers here -->
             <div class='number-row'>
-              <span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
             </div>
             <div class='number-row'>
-              <span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
             </div>
             <div class='number-row'>
-              <span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
             </div>
           </div>
           <div class='remaining-numbers'></div>
         </li>
-        <!-- The above times the number of cards in the game; @TODO: Make this programmatic --> 
+        <li class='card-container'>
+          <div class='card 1'>
+            <!-- Individual numbers here -->
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+          </div>
+          <div class='remaining-numbers'></div>
+        </li>
+        <li class='card-container'>
+          <div class='card 2'>
+            <!-- Individual numbers here -->
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+          </div>
+          <div class='remaining-numbers'></div>
+        </li>
+        <li class='card-container'>
+          <div class='card 3'>
+            <!-- Individual numbers here -->
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+          </div>
+          <div class='remaining-numbers'></div>
+        </li>
+        <li class='card-container'>
+          <div class='card 4'>
+            <!-- Individual numbers here -->
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+          </div>
+          <div class='remaining-numbers'></div>
+        </li>
+        <li class='card-container'>
+          <div class='card 5'>
+            <!-- Individual numbers here -->
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+            <div class='number-row'>
+              <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
+            </div>
+          </div>
+          <div class='remaining-numbers'></div>
+        </li>
+        <!-- The above times the number of cards in the game; @TODO: Make this programmatic to allow for a dynamic number of cards --> 
       </ol>
     </main>
+    <script src='assets/js/cardFactory.js'></script>
+    <script src='assets/js/viewFactory.js'></script>
+    <script src='assets/js/main.js'></script>
   </body>
 </html>
