remaining number count added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
             </div>
           </div>
-          <div class='remaining-numbers'></div>
+          <div class='remaining-numbers'><span class='remaining-count'><!--Injected through JS: See assets/js/viewFactory's 'checkRemainingNumberCount' method--></span> to go!</div>
         </li>
         <li class='card-container'>
           <div class='card 1'>
@@ -40,7 +40,7 @@
               <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
             </div>
           </div>
-          <div class='remaining-numbers'></div>
+          <div class='remaining-numbers'><span class='remaining-count'><!--Injected through JS: See assets/js/viewFactory's 'checkRemainingNumberCount' method--></span> to go!</div>
         </li>
         <li class='card-container'>
           <div class='card 2'>
@@ -55,7 +55,7 @@
               <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
             </div>
           </div>
-          <div class='remaining-numbers'></div>
+          <div class='remaining-numbers'><span class='remaining-count'><!--Injected through JS: See assets/js/viewFactory's 'checkRemainingNumberCount' method--></span> to go!</div>
         </li>
         <li class='card-container'>
           <div class='card 3'>
@@ -70,7 +70,7 @@
               <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
             </div>
           </div>
-          <div class='remaining-numbers'></div>
+          <div class='remaining-numbers'><span class='remaining-count'><!--Injected through JS: See assets/js/viewFactory's 'checkRemainingNumberCount' method--></span> to go!</div>
         </li>
         <li class='card-container'>
           <div class='card 4'>
@@ -85,7 +85,7 @@
               <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
             </div>
           </div>
-          <div class='remaining-numbers'></div>
+          <div class='remaining-numbers'><span class='remaining-count'><!--Injected through JS: See assets/js/viewFactory's 'checkRemainingNumberCount' method--></span> to go!</div>
         </li>
         <li class='card-container'>
           <div class='card 5'>
@@ -100,7 +100,7 @@
               <span class='column-1'>&nbsp;</span><span class='column-2'>&nbsp;</span><span class='column-3'>&nbsp;</span><span class='column-4'>&nbsp;</span><span class='column-5'>&nbsp;</span><span class='column-6'>&nbsp;</span><span class='column-7'>&nbsp;</span><span class='column-8'>&nbsp;</span><span class='column-9'>&nbsp;</span>
             </div>
           </div>
-          <div class='remaining-numbers'></div>
+          <div class='remaining-numbers'><span class='remaining-count'><!--Injected through JS: See assets/js/viewFactory's 'checkRemainingNumberCount' method--></span> to go!</div>
         </li>
         <!-- The above times the number of cards in the game; @TODO: Make this programmatic to allow for a dynamic number of cards --> 
       </ol>
