--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name='mobile-web-app-capable' content='yes'>
     <meta name='apple-mobile-web-app-capable' content='yes'>
     <link rel='author' href='https://plus.google.com/+DavidNimmo/posts'>
-    <link rel='stylesheet' href='assets/style/main.css'>
+    <link rel='stylesheet' href='assets/src/style/main.css'>
   </head>
   <body>
     <main>
@@ -109,9 +109,9 @@
         <!-- The above times the number of cards in the game; @TODO: Make this programmatic to allow for a dynamic number of cards --> 
       </ol>
     </main>
-    <script src='assets/js/bingoCaller.js'></script>
-    <script src='assets/js/cardFactory.js'></script>
-    <script src='assets/js/viewFactory.js'></script>
-    <script src='assets/js/main.js'></script>
+    <script src='assets/src/js/bingoCaller.js'></script>
+    <script src='assets/src/js/cardFactory.js'></script>
+    <script src='assets/src/js/viewFactory.js'></script>
+    <script src='assets/src/js/main.js'></script>
   </body>
 </html>
